--- a/TRPO/Pages/AuthPage.xaml
+++ b/TRPO/Pages/AuthPage.xaml
@@ -16,15 +16,15 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="1" MaxHeight="500" MinWidth="5" MaxWidth="305" MinHeight="5">
-            <TextBlock FontFamily="Regular" Margin="0,0,0,150" Grid.Column="1" FontSize="32" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center">Авторизация</TextBlock>
-            <TextBox Margin="0,0,0,0" x:Name="Login" KeyDown="Login_KeyDown" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBox>
-            <PasswordBox Grid.Column="1" Margin="0,140,0,0" x:Name="Password" KeyDown="Password_KeyDown" FontSize="18" PasswordChar="*" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center"></PasswordBox>
-            <TextBox Visibility="Collapsed" Margin="0,140,0,0" Name="PasswordUnmask" FontSize="18" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <TextBlock FontFamily="Regular" Margin="0,0,0,200" Grid.Column="1" FontSize="32" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center">Авторизация</TextBlock>
+            <TextBox Margin="0,0,0,80" x:Name="Login" KeyDown="Login_KeyDown" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBox>
+            <PasswordBox Grid.Column="1" Margin="0,80,0,0" x:Name="Password" KeyDown="Password_KeyDown" FontSize="18" PasswordChar="*" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center"></PasswordBox>
+            <TextBox Visibility="Collapsed" Margin="0,80,0,0" Name="PasswordUnmask" FontSize="18" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Right" VerticalAlignment="Center"/>
 
         </Grid>
         
-        <TextBlock Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" Height="auto" Width="auto" Grid.Row="1" Grid.Column="1" x:Name="ShowPassword" Text="SHOW" PreviewMouseDown="ShowPassword_PreviewMouseDown" PreviewMouseUp="ShowPassword_PreviewMouseUp" MouseLeave="ShowPassword_MouseLeave"/>
-        <Button Background="#afeeee" Width="80" Height="30" x:Name="LoginButton" Margin="0,150,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Click="Login_Click" >Login</Button>
-        <TextBlock x:Name="RegTxt" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Margin="0,200,0,0" Text="Registration" PreviewMouseUp="LoginButton_PreviewMouseDown"/>
+        <TextBlock Margin="0,200,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" Height="auto" Width="auto" Grid.Row="1" Grid.Column="1" x:Name="ShowPassword" Text="Показать пароль" PreviewMouseDown="ShowPassword_PreviewMouseDown" PreviewMouseUp="ShowPassword_PreviewMouseUp" MouseLeave="ShowPassword_MouseLeave" FontSize="20"/>
+        <Button Background="#afeeee" Width="auto" Height="auto" x:Name="LoginButton" Margin="0,300,0,0" Padding="10" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Click="Login_Click" FontSize="20">Войти</Button>
+        <TextBlock x:Name="RegTxt" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Margin="0,400,0,0" Text="Регистрация" PreviewMouseUp="LoginButton_PreviewMouseDown"/>
     </Grid>
 </Page>
