--- a/TRPO/Pages/AuthPage.xaml
+++ b/TRPO/Pages/AuthPage.xaml
@@ -17,9 +17,9 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="1" MaxHeight="500" MinWidth="5" MaxWidth="305" MinHeight="5">
             <TextBlock FontFamily="Regular" Margin="0,0,0,200" Grid.Column="1" FontSize="32" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center">Авторизация</TextBlock>
-            <TextBox Margin="0,0,0,80" x:Name="Login" KeyDown="Login_KeyDown" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBox>
-            <PasswordBox Grid.Column="1" Margin="0,80,0,0" x:Name="Password" KeyDown="Password_KeyDown" FontSize="18" PasswordChar="*" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center"></PasswordBox>
-            <TextBox Visibility="Collapsed" Margin="0,80,0,0" Name="PasswordUnmask" FontSize="18" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <TextBox Margin="0,0,0,80" x:Name="Login" KeyDown="Login_KeyDown" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBox>
+            <PasswordBox Grid.Column="1" Margin="0,80,0,0" x:Name="Password" KeyDown="Password_KeyDown" FontSize="30" PasswordChar="*" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center"></PasswordBox>
+            <TextBox Visibility="Collapsed" Margin="0,80,0,0" Name="PasswordUnmask" FontSize="30" BorderThickness="2" BorderBrush="Black" Width="300" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         </Grid>
         
