--- a/TRPO/Pages/MenuPage.xaml
+++ b/TRPO/Pages/MenuPage.xaml
@@ -6,9 +6,16 @@
       xmlns:local="clr-namespace:TRPO.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MenuPage">
+      Title="MenuPage"
+      Background="White">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="300"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="ListOfProducts" Click="ListOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" VerticalAlignment="Top" Margin="0,100,0,0" Padding="10" FontSize="18">Список товаров</Button>
+        <Button x:Name="ReceiptOfProducts" Click="ReceiptOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" VerticalAlignment="Top" Margin="0,150,0,0" Padding="10" FontSize="18">Постпуление товаров</Button>
     </Grid>
 </Page>
