--- a/TRPO/Pages/AuthPage.xaml
+++ b/TRPO/Pages/AuthPage.xaml
@@ -7,7 +7,6 @@
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="960"
       Title="AuthPage">
-
     <Grid Background="White">
 
         <Grid.ColumnDefinitions>
@@ -25,7 +24,7 @@
         </Grid>
         
         <TextBlock Margin="0,200,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" Height="auto" Width="auto" Grid.Row="1" Grid.Column="1" x:Name="ShowPassword" Text="Показать пароль" PreviewMouseDown="ShowPassword_PreviewMouseDown" PreviewMouseUp="ShowPassword_PreviewMouseUp" MouseLeave="ShowPassword_MouseLeave" FontSize="20"/>
-        <Button GotFocus="Login_Click" Background="#afeeee" Width="auto" Height="auto" x:Name="LoginButton" Margin="0,300,0,0" Padding="10" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Click="Login_Click" FontSize="20">Войти</Button>
+        <Button Style="{DynamicResource ButtonStyle1}" GotFocus="Login_Click" Background="#afeeee" Width="auto" Height="auto" x:Name="LoginButton" Margin="0,300,0,0" Padding="10" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Click="Login_Click" FontSize="20">Войти</Button>
         <TextBlock x:Name="RegTxt" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Margin="0,400,0,0" Text="Регистрация" PreviewMouseUp="LoginButton_PreviewMouseDown"/>
     </Grid>
 </Page>
