--- a/TRPO/Pages/ListOfProductsPage.xaml
+++ b/TRPO/Pages/ListOfProductsPage.xaml
@@ -8,17 +8,42 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ListOfProductsPage"
       Background="White">
-
+    <Page.Resources>
+        <ObjectDataProvider MethodName="GetName" x:Key="convertTemp">
+            <ObjectDataProvider.MethodParameters>
+                
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <TextBox TextChanged="SearchTextBox_TextChanged" LostFocus="SearchTextBox_LostFocus" x:Name="SearchTextBox" GotFocus="TextBox_GotFocus" Grid.Column="0" VerticalAlignment="Top" Margin="10"></TextBox>
-        <TextBlock x:Name="SearchTextBlock" IsHitTestVisible="False" VerticalAlignment="Top" Padding="5,0,0,0" Margin="10">Поиск</TextBlock> 
+        <TextBlock x:Name="SearchTextBlock" IsHitTestVisible="False" VerticalAlignment="Top" Padding="5,0,0,0" Margin="10">Поиск</TextBlock>
         <TextBlock Grid.Column="0" HorizontalAlignment="Center" FontSize="18" Margin="0,30,0,0">Категории</TextBlock>
         <ListBox SelectionChanged="ProductsCategoriesListBox_SelectionChanged" x:Name="ProductsCategoriesListBox" Grid.Column="0" VerticalAlignment="Top" Margin="0,60,0,0" HorizontalAlignment="Center" Width="auto" Height="auto"></ListBox>
         <TextBlock Grid.Column="1" VerticalAlignment="Top" Margin="10,10,0,0" Padding="10">Товары</TextBlock>
         <ListBox x:Name="ProductsListBox" Grid.Column="1" VerticalAlignment="Top" Padding="10" Margin="5,45,0,0"/>
+        <ListView x:Name="ProductsListView" Grid.Column="1" VerticalAlignment="Center" Padding="10" Margin="5,45,0,0" ItemsSource="{Binding App.GetProduct}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="ToolTip">
+                        <Setter.Value>
+                            <TextBlock Text="{Binding Path=name}"/>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="ID" DisplayMemberBinding="{Binding Path=product_id}"></GridViewColumn>
+                    <GridViewColumn Header="Название" DisplayMemberBinding="{Binding Path=name, BindsDirectlyToSource=True, Source=GetName}"></GridViewColumn>
+                    <GridViewColumn Header="Кол-во" DisplayMemberBinding="{Binding Path=count}"></GridViewColumn>
+                    <GridViewColumn Header="Цена" DisplayMemberBinding="{Binding Path=price}"></GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Page>
