--- a/TRPO/Dictionary.xaml
+++ b/TRPO/Dictionary.xaml
@@ -1,6 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <!--Constant values-->
+    <SolidColorBrush x:Key="MainColor1" Color="#B5D5CA"/>
+    <StaticResource ResourceKey="MainColor1" x:Key="MainColor1Resource"/>
+    <SolidColorBrush x:Key="MainColor2" Color="#E0A9AF"/>
+    <StaticResource ResourceKey="MainColor2" x:Key="MainColor2Resource"/>
+    <SolidColorBrush x:Key="AddyColor1" Color="#D1EEFC"/>
+    <StaticResource ResourceKey="AddyColor1" x:Key="AddyColor1Resource"/>
+    <SolidColorBrush x:Key="AddyColor2" Color="#FFFCD6"/>
+    <StaticResource ResourceKey="AddyColor2" x:Key="AddyColor2Resource"/>
     <!--Button style-->
     <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
     <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
@@ -13,9 +21,9 @@
     <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
     <Style TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-        <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
-        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+        <Setter Property="Background" Value="{StaticResource MainColor1Resource}"/>
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="Foreground" Value="{StaticResource MainColor2Resource}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
