--- a/TRPO/Dictionaries/DarkTheme.xaml
+++ b/TRPO/Dictionaries/DarkTheme.xaml
@@ -1,17 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--Constant values-->
-    <SolidColorBrush x:Key="MainColor1" Color="#B5D5CA"/>
+    <SolidColorBrush x:Key="MainColor1" Color="Gray"/>
     <StaticResource ResourceKey="MainColor1" x:Key="MainColor1Resource"/>
-    <SolidColorBrush x:Key="MainColor2" Color="#E0A9AF"/>
+    <SolidColorBrush x:Key="MainColor2" Color="Black"/>
     <StaticResource ResourceKey="MainColor2" x:Key="MainColor2Resource"/>
-    <SolidColorBrush x:Key="AddyColor1" Color="#D1EEFC"/>
+    <SolidColorBrush x:Key="AddyColor1" Color="DarkGray"/>
     <StaticResource ResourceKey="AddyColor1" x:Key="AddyColor1Resource"/>
-    <SolidColorBrush x:Key="AddyColor2" Color="#FFFCD6"/>
+    <SolidColorBrush x:Key="AddyColor2" Color="DarkBlue"/>
     <StaticResource ResourceKey="AddyColor2" x:Key="AddyColor2Resource"/>
-    <SolidColorBrush x:Key="TextColor1" Color="white"/>
+    <SolidColorBrush x:Key="TextColor1" Color="black"/>
     <StaticResource ResourceKey="TextColor1" x:Key="TextColor1Resource"/>
-    <SolidColorBrush x:Key="TextColor2" Color="Black"/>
+    <SolidColorBrush x:Key="TextColor2" Color="white"/>
     <StaticResource ResourceKey="TextColor2" x:Key="TextColor2Resource"/>
     <!--Button style-->
     <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
@@ -62,24 +62,25 @@
     </Style>
     <!--TextBox style-->
     <Style TargetType="TextBox">
+        <Setter Property="Foreground" Value="{StaticResource TextColor1Resource}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBoxBase}">
-                    <Border CornerRadius="5" Padding="2" Background="White" BorderBrush="Black" BorderThickness="1">
+                    <Border CornerRadius="5" Padding="2" Background="{StaticResource MainColor1Resource}" BorderBrush="Black" BorderThickness="1">
                         <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
                     </Border>
-                    
+
                 </ControlTemplate>
-                
+
             </Setter.Value>
         </Setter>
     </Style>
     <!--PasswordBox style-->
     <Style TargetType="{x:Type PasswordBox}">
         <Setter Property="PasswordChar" Value="●"/>
-        <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+        <Setter Property="Background" Value="{StaticResource MainColor1Resource}"/>
         <Setter Property="BorderBrush" Value="black"/>
-        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+        <Setter Property="Foreground" Value="{StaticResource TextColor1Resource}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
@@ -90,7 +91,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type PasswordBox}">
-                    <Border x:Name="border" CornerRadius="5" Padding="2" Background="White" BorderBrush="Black" BorderThickness="1">
+                    <Border x:Name="border" CornerRadius="5" Padding="2" Background="{StaticResource MainColor1Resource}" BorderBrush="Black" BorderThickness="1">
                         <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -120,19 +121,35 @@
     <!--ListView style -->
     <Style TargetType="ListView">
         <Setter Property="Background" Value="{StaticResource MainColor1Resource}"/>
-        <Setter Property="Foreground" Value="{StaticResource TextColor2Resource}"></Setter>
-        
+        <Setter Property="Foreground" Value="{StaticResource TextColor2Resource}"/>
     </Style>
+    <Style TargetType="GridViewColumnHeader">
+        <Setter Property="Foreground" Value="{StaticResource TextColor2Resource}"/>
+        <Setter Property="Background" Value="{StaticResource MainColor2Resource}"/>
+    </Style>
+    
     <Style TargetType="ListViewItem">
-        <Setter Property="Foreground" Value="{StaticResource AddyColor2Resource}" />
-            
+        <Setter Property="Foreground" Value="{StaticResource TextColor2Resource}"/>
     </Style>
     <!--ListBox style-->
     <Style TargetType="ListBox">
+        <Setter Property="Foreground" Value="{StaticResource TextColor2Resource}"/>
         <Setter Property="Background" Value="{StaticResource MainColor1Resource}"></Setter>
     </Style>
-    
+
     <Style TargetType="Grid">
         <Setter Property="Background" Value="{StaticResource MainColor2Resource}"></Setter>
+    </Style>
+
+    <!--ComboBox style-->
+    <Style TargetType="ComboBox">
+        <Setter Property="Background" Value="{StaticResource MainColor1Resource}"/>
+    </Style>
+    <Style TargetType="ComboBoxItem">
+        <Setter Property="Background" Value="{StaticResource MainColor1Resource}"/>
+    </Style>
+    <!--Label style-->
+    <Style TargetType="Label">
+        <Setter Property="Foreground" Value="{StaticResource TextColor2Resource}"/>
     </Style>
 </ResourceDictionary>
