--- a/TRPO/Pages/MenuPage.xaml
+++ b/TRPO/Pages/MenuPage.xaml
@@ -15,8 +15,11 @@
             <ColumnDefinition Width="300"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button x:Name="ListOfProducts" Click="ListOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" VerticalAlignment="Top" Margin="0,100,0,0" Padding="10" FontSize="18">Список товаров</Button>
-        <Button x:Name="ReceiptOfProducts" Click="ReceiptOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" VerticalAlignment="Top" Margin="0,150,0,0" Padding="10" FontSize="18">Постпуление товаров</Button>
-        <Button x:Name="Settings" Click="Settings_Click" Grid.Column="1" Height="auto" Width="auto" VerticalAlignment="Top" Margin="0,200,0,0" Padding="10" FontSize="18" Content="Настройки"/>
+        <StackPanel Grid.Column="1" Margin="0,50,0,0">
+            <Button Margin="5" x:Name="ListOfProducts" Click="ListOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18">Список товаров</Button>
+            <Button Margin="5" x:Name="ReceiptOfProducts" Click="ReceiptOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18">Постпуление товаров</Button>
+            <Button Margin="5" x:Name="Settings" Click="Settings_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18" Content="Настройки"/>
+        </StackPanel>
+        
     </Grid>
 </Page>
