--- a/TRPO/Dictionaries/DarkTheme.xaml
+++ b/TRPO/Dictionaries/DarkTheme.xaml
@@ -138,7 +138,7 @@
         <Setter Property="Foreground" Value="{StaticResource MainTextColorResource}"/>
     </Style>
     <Style TargetType="GridViewColumnHeader">
-        <Setter Property="Template">
+        <!--<Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
                     <Border Background="{StaticResource AccentColorResource}">
@@ -146,7 +146,7 @@
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
         <Setter Property="Foreground" Value="{StaticResource MainTextColorResource}"/>
         <Setter Property="Background" Value="{StaticResource MainColor1Resource}"/>
         
