--- a/TRPO/Pages/MenuPage.xaml
+++ b/TRPO/Pages/MenuPage.xaml
@@ -19,6 +19,7 @@
             <Button Margin="5" x:Name="ListOfProducts" Click="ListOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18">Список товаров</Button>
             <Button Margin="5" x:Name="ReceiptOfProducts" Click="ReceiptOfProducts_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18">Постпуление товаров</Button>
             <Button Margin="5" x:Name="Settings" Click="Settings_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18" Content="Настройки"/>
+            <Button Margin="5" x:Name="Register" Click="Register_Click" Grid.Column="1" Height="auto" Width="auto" Padding="10" FontSize="18" Content="Регистрация пользователя"/>
         </StackPanel>
         
     </Grid>
