--- a/TRPO/Pages/SettingsPage.xaml
+++ b/TRPO/Pages/SettingsPage.xaml
@@ -6,11 +6,12 @@
       xmlns:local="clr-namespace:TRPO.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SettingsPage">
+      Title="SettingsPage"
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
 
     <Grid>
         <Label VerticalAlignment="top" HorizontalAlignment="Center" Margin="0,100,0,0" FontSize="18">Настройки</Label>
-        <ComboBox SelectionChanged="ThemeComboBox_SelectionChanged" x:Name="ThemeComboBox" VerticalAlignment="Center" HorizontalAlignment="Center" Width="150" Padding="10">
+        <ComboBox x:Name="ThemeComboBox" VerticalAlignment="Center" HorizontalAlignment="Center" Width="150" Padding="10">
             <ComboBoxItem Name="LightTheme">
                 <StackPanel>
                     <TextBlock FontSize="16">Светлая</TextBlock>
