--- a/TRPO/Pages/RegPage.xaml
+++ b/TRPO/Pages/RegPage.xaml
@@ -31,17 +31,7 @@
             <TextBlock>Зарплата</TextBlock>
             <TextBox></TextBox>
             <TextBlock>Роль</TextBlock>
-            <ComboBox Foreground="black"  x:Name="PositionComboBox">
-                <ComboBox.Style>
-                    <Style TargetType="ComboBox">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.DoesNotParticipate}" Value="True">
-                                <Setter Property="Foreground" Value="Red"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </ComboBox.Style>
-            </ComboBox>
+            <ComboBox Foreground="black" x:Name="PositionComboBox"></ComboBox>
         </StackPanel>
     </Grid>
 </Page>
