--- a/TRPO/Pages/ListOfProductsPage.xaml
+++ b/TRPO/Pages/ListOfProductsPage.xaml
@@ -27,6 +27,9 @@
                             <DataTemplate>
                                 <StackPanel>
                                     <Image Source="{Binding Path=imageSource}" Height="30" Width="30" Stretch="Fill"></Image>
+                                    <StackPanel>
+                                        <TextBlock />
+                                    </StackPanel>
                                 </StackPanel>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
