--- a/TRPO/Dictionaries/DarkTheme.xaml
+++ b/TRPO/Dictionaries/DarkTheme.xaml
@@ -4,7 +4,7 @@
     <!--Background and text colors-->
     <SolidColorBrush x:Key="BackDropColor" Color="#1A1A1A"/>
     <StaticResource ResourceKey="BackDropColor" x:Key="BackDropColorResource"/>
-    <SolidColorBrush x:Key="MainTextColor" Color="Black"/>
+    <SolidColorBrush x:Key="MainTextColor" Color="#E2E3E7"/>
     <StaticResource ResourceKey="MainTextColor" x:Key="MainTextColorResource"/>
     <SolidColorBrush x:Key="SecondTextColor" Color="#000000"/>
     <StaticResource ResourceKey="SecondTextColor" x:Key="SecondTextColorResource"/>
@@ -185,6 +185,7 @@
     <Style TargetType="ListBox">
         <Setter Property="Foreground" Value="{StaticResource MainTextColorResource}"/>
         <Setter Property="Background" Value="{StaticResource ThemeColor1Resource}"></Setter>
+        
     </Style>
 
     <Style TargetType="Grid">
@@ -192,10 +193,14 @@
     </Style>
 
     <!--ComboBox style-->
-    <!--<Style TargetType="ComboBox">
-        <Setter Property="Background" Value="{StaticResource ThemeColor1Resource}"/>
-        <Setter Property="Foreground" Value="{StaticResource SecondTextColorResource}"/>
-    </Style>-->
+    <Style TargetType="ComboBox">
+        <Style.Triggers>
+            <Trigger Property="IsDropDownOpen" Value="true">
+                <Setter Property="Foreground" Value="Black"/>
+            </Trigger>
+        </Style.Triggers>
+
+    </Style>
 
 
     <Style TargetType="ComboBoxItem">
@@ -211,6 +216,7 @@
                         <Trigger Property="IsSelected" Value="True">
                             <Setter Property="Background" TargetName="ComboBoxItemBorder" Value="{StaticResource ThemeColor2Resource}"/>
                         </Trigger>
+                        
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
